fixing spacing

--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -1,10 +1,3 @@
-.explainer {
-  padding: 40px;
-  @media(max-width: 768px) {
-    padding: 25px;
-  }
-}
-
 .home-stories {
   padding: 40px;
   display: grid;
@@ -16,18 +9,33 @@
   }
 }
 
-.explainer-top-wave {
+.home-card {
+  text-align: center;
+}
+
+.explainer {
+  padding: 40px;
+  @media(max-width: 768px) {
+    padding: 25px;
+  }
+}
+
+.explainer-top-wave{
   position:absolute;
+  bottom: -120px;
+  @media(max-width: 768px) {
+    bottom: -190px;
+  }
 }
 
 .explainer-container {
   background: #222222;
-  height: 500px;
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   p {
     color: white;
+    line-height: 1.5em;
   }
   @media(max-width: 768px) {
     grid-template-columns: 1fr;
